--- a/telemedicine.html
+++ b/telemedicine.html
@@ -24,6 +24,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./custom/all.css" />
+    <link rel="stylesheet" href="./custom/telemedicine.css" />
   </head>
 
   <body>
@@ -93,44 +94,135 @@
       </div>
     </nav>
     <!-- 1212 navbar↑ -->
-    <div class="container-xxl px-0" style="margin-bottom: 60px">
+    <div class="container-xxl px-0" style="margin-bottom: 72px">
       <img src="./images/about/hero-md-01.webp" alt="" class="w-100 d-md-none" />
       <img src="./images/about/hero-xxl-01.png" alt="" class="w-100 d-none d-md-block" />
     </div>
-    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
-      <h1 class="text-center text-medapri fw-bold">Global Solution Service Provider</h1>
-      <p>MedAlliance Inc. provides made-in-Taiwan medical PPE items and workflow based Solution-as-a-Service offerings with tailored designed medical IoT equipment and workflow assistant software to enhance the efficiency of mobile nursing, patient engagement, telemedicine, remote home care use case scenarios for healthcare provider in acute care, post-acute care, and long term care facilities.</p>
-    </div>
-    <div class="container-xl">
-      <img src="./images/about/about-01.png" alt="" class="w-100" />
-    </div>
-    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
-      <h1 class="fs-2 text-center text-medapri fw-bold">Serving Global Smart Healthcare Needs</h1>
-      <p>MedAlliance Inc. is your experienced partner in healthcare innovation. We bring practical know-how to the table, ready to deliver a diverse range of solutions that seamlessly integrate with smart healthcare.</p>
-    </div>
-    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
+
+    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 72px">
       <div class="row">
-        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
-          <img src="./images/about/Brain CT AI Analytic.webp" alt="" class="img-thumbnail border-0 mb-2" />
-          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #7a9ccc; border-radius: 999px">Brain CT AI Analytic</p>
+        <h1 class="fw-bold fs-2 text-color_bk80">Telemedicine</h1>
+        <p class="p-color-bk80">Revolutionize healthcare through telemedicine: enhancing convenience, efficiency, and personalization while ensuring high-quality care is accessible to everyone.</p>
+      </div>
+      <div class="row row-cols-1 row-cols-md-2" style="margin-bottom:60px ;">
+        <div class="col ">
+          <h2 class="text-center">
+            <span class="fs-5 text-style_pills-bk40 px-2 py-1"> Traditional process </span>
+          </h2>
+          <img src="./images/telemedicine/traditional_process.png" class="img-thumbnail border-0" alt="Traditional Process" />
+          <div class="card border-0 shadow-sm mb-3 ">
+            <div class="row g-0 align-items-center">
+              <div class="col-2 ">
+                <img src="./images/telemedicine/icon-soso.png" class="img-fluid rounded-start" alt="soso" />
+              </div>
+              <div class="col-10 ">
+                <div class="card-body text-color_bk80">
+                  <h5 class="card-title fs-5 ">Geographical Barriers</h5>
+                  <p class="card-text">Regional Disparity of Medical Resources</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 shadow-sm mb-3 ">
+            <div class="row g-0 align-items-center">
+              <div class="col-2 mx-auto">
+                <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start " alt="bad" />
+              </div>
+              <div class="col-10 ">
+                <div class="card-body text-color_bk80 ">
+                  <h5 class="card-title fs-5 ">Time Optimization</h5>
+                  <p class="card-text">Manual administrative duties disrupt the primary focus of healthcare providers on delivering patient care.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 shadow-sm ">
+            <div class="row g-0 align-items-center">
+              <div class="col-2 ">
+                <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start" alt="bad" />
+              </div>
+              <div class="col-10 ">
+                <div class="card-body text-color_bk80 ">
+                  <h5 class="card-title fs-5 ">Privacy and Security</h5>
+                  <p class="card-text">Lack of a secure mechanism for patient data results in potential unauthorized access by malicious individuals.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
-          <img src="./images/about/Handheld Ultrasound.webp" alt="" class="img-thumbnail border-0 mb-2" />
-          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #b1d24c; border-radius: 999px">Handheld Ultrasound</p>
+        <div class="col">
+          <h2 class="text-center">
+            <span class="fs-5 text-style_pills-edasec px-2 py-1"> Telemedicine process </span>
+          </h2>
+          <img src="./images/telemedicine/telemedicine_process.png" class="img-thumbnail border-0" alt="Telemedicine Process" />
+          <div class="card border-0 shadow-sm mb-3 ">
+            <div class="row g-0 align-items-center">
+              <div class="col-2 ">
+                <img src="./images/telemedicine/icon-good.png" class="img-fluid rounded-start" alt="good" />
+              </div>
+              <div class="col-10">
+                <div class="card-body text-color_bk80">
+                  <h5 class="card-title fs-5 ">Geographical Barriers</h5>
+                  <p class="card-text">Telemedicine is “healing from a distance.” Patients are no longer held captive by their location</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 shadow-sm mb-3 ">
+            <div class="row g-0 align-items-center">
+              <div class="col-2 mx-auto">
+                <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start " alt="bad" />
+              </div>
+              <div class="col-10">
+                <div class="card-body text-color_bk80">
+                  <h5 class="card-title fs-5 ">Time Optimization</h5>
+                  <p class="card-text">AI technologies optimize workflows and remove administrative burdens, allowing healthcare providers to prioritize personalized patient care.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 shadow-sm ">
+            <div class="row g-0 align-items-center">
+              <div class="col-2 ">
+                <img src="./images/telemedicine/icon-bad.png" class="img-fluid rounded-start" alt="bad" />
+              </div>
+              <div class="col-10">
+                <div class="card-body text-color_bk80">
+                  <h5 class="card-title fs-5 ">Privacy and Security</h5>
+                  <p class="card-text">Electronic medical records are encrypted and securely stored</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
-          <img src="./images/about/Pediatric Bone Age X Ray System.webp" alt="" class="img-thumbnail border-0 mb-2" />
-          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #f26472; border-radius: 999px">Pediatric Bone Age X Ray System</p>
-        </div>
-        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
-          <img src="./images/about/Portable X-Ray Machine.webp" alt="" class="img-thumbnail border-0 mb-2" />
-          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #59bfbd; border-radius: 999px">Portable X-Ray Machine</p>
+      </div>
+      <div class="row telePage">
+        <ul class="nav nav-tabs nav-fill px-2" style="flex-wrap: nowrap;">
+          <li class="nav-item">
+            <a class="nav-link active fw-bold fs-5"  id="tab1" data-bs-toggle="tab" href="#content1">Mobile Nursing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link fw-bold fs-5" id="tab2" data-bs-toggle="tab" href="#content2">Hospital at Home</a>
+          </li>
+        </ul>
+
+        <!-- 分頁內容區域 -->
+        <div class="tab-content mt-2">
+          <!-- 分頁 1 內容 -->
+          <div class="tab-pane fade show active" id="content1">
+            <h2>Mobile Nursing</h2>
+            <p>這是分頁 1 的內容。</p>
+          </div>
+
+          <!-- 分頁 2 內容 -->
+          <div class="tab-pane fade" id="content2">
+            <h2>Hospital at Home</h2>
+            <p>這是分頁 2 的內容。</p>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container-xl" style="margin-bottom: 72px">
-      <img src="./images/about/about-02.png" alt="" class="w-100" />
-    </div>
+
     <!-- footer↓  -->
     <footer class="container-fluid" style="background-color: #e9e9e9; padding-top: 80px; padding-bottom: 40px">
       <div class="container-xxl">
