--- a/medical-equipments/healthcare_it/op-ivs6-006-be.html
+++ b/medical-equipments/healthcare_it/op-ivs6-006-be.html
@@ -141,34 +141,51 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <h4 class="fw-bold fs-5" style="color: #595857"><i class="bi bi-stack me-2"></i>Main Specifications</h4>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
-                  <td class="p-color-bk80" style="color: #595857;">OP-IVS6-007-BE</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
+                  <td class="p-color-bk80" style="color: #595857;">OP-IVS6-006-BE</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Weight</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Weight</th>
                   <td class="p-color-bk80" style="color: #595857;">30 lbs</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Height</th>
+                  <td class="p-color-bk80" style="color: #595857;">51.5” ~ 89.4” (1308 ~ 2270 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">24.5 ” (622.3 mm) with 6 Legs</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Caster Dimension</th>
+                  <td class="p-color-bk80" style="color: #595857;">4” Twin Casters (Two Brakes in Front)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole Top / Bottom</th>
+                  <td class="p-color-bk80" style="color: #595857;">Ø 7/8” (22.22 mm) / Ø 1-1/4” (31.75 mm)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Hook</th>
+                  <td class="p-color-bk80" style="color: #595857;">4 Hooks</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Base Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Cast Iron</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Pole / Hook Material</th>
+                  <td class="p-color-bk80" style="color: #595857;">Chrome Plated Steel</td>
+                </tr>
               </tbody>
             </table>
           </div>
