--- a/medical-equipments/medical_devices_and_equipments/imaging_solutions/handheld_ultrasound.html
+++ b/medical-equipments/medical_devices_and_equipments/imaging_solutions/handheld_ultrasound.html
@@ -29,14 +29,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../../custom/all.css" />
-    <link rel="stylesheet" href="../../custom/equipments.css" />
+    <link rel="stylesheet" href="../../../custom/all.css" />
+    <link rel="stylesheet" href="../../../custom/equipments.css" />
   </head>
 
   <body>
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
-      <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="../../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
+      <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="http://medalliance.com.tw/images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -80,7 +80,7 @@
                 <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
               </li>
               <li>
-                <a class="dropdown-item" href="../../medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
               </li>
               <li>
                 <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
@@ -108,17 +108,17 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-01.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Handheld_Ultrasound-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-02.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Handheld_Ultrasound-02.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-03.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Handheld_Ultrasound-03.jpg');"></div>
                 </div>
               </div>
             </div>
@@ -129,17 +129,17 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-01.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Handheld_Ultrasound-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-02.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Handheld_Ultrasound-02.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Imaging_Solutions/Handheld_Ultrasound-03.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('http://medalliance.com.tw/images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Handheld_Ultrasound-03.jpg');"></div>
                 </div>
               </div>
             </div>
