--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./custom/all.css" />
+    <link rel="stylesheet" href="http://medalliance.com.tw/custom/all.css" />
   </head>
 
   <body>
