--- a/medical-equipments.html
+++ b/medical-equipments.html
@@ -30,7 +30,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="./custom/all.css" />
+    <link rel="stylesheet" href="http://medalliance.com.tw/custom/all.css" />
   </head>
 
   <body>
@@ -115,7 +115,7 @@
           </div>
           <div class="col-6 col-sm-3">
             <div class="card mb-3 h-100  border-0">
-              <img src="./images/medical-equipments/Imaging_Solutions/Pediatric_Bone_Age_X-ray_System-01.jpg" class="card-img-top" alt="Pediatric Bone Age X-ray System" />
+              <img src="./images/medical-equipments/medical_devices_and_equipments/imaging_solutions/Pediatric_Bone_Age_X-ray_System-01.jpg" class="card-img-top" alt="Pediatric Bone Age X-ray System" />
               <div class="card-body text-center">
                 <h5 class="card-title fs-6 h-color-bk80">Pediatric Bone Age X-ray System</h5>
               </div>
