--- a/medical-equipments/medical_supplies/masks/OP-FM-3Ply.html
+++ b/medical-equipments/medical_supplies/masks/OP-FM-3Ply.html
@@ -140,34 +140,33 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
-                  <td class="p-color-bk80" style="color: #595857;">OP-FM-3Ply</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
+                  <td class="p-color-bk80" style="color: #595857;">OP-FM-3PLY</td>
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Mask Size</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Size</th>
                   <td class="p-color-bk80" style="color: #595857;">Adult</td>
                 </tr>
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Package</th>
+                  <td class="p-color-bk80" style="color: #595857;">Box of 50</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Certification</th>
+                  <td class="p-color-bk80" style="color: #595857;">
+                    CNS 14776 T4038-2003,<br />
+                    CNS 1477 Z2125-2011
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
