--- a/medical-equipments/medical_supplies/masks/OP-FM-N95-FEC.html
+++ b/medical-equipments/medical_supplies/masks/OP-FM-N95-FEC.html
@@ -141,41 +141,35 @@
       <div class="py-5">
         <div class="row">
           <div class="col-12 col-md-10 mx-auto">
-            <h3 class="mb-3 fw-bold text-color_bk80">Additional information</h3>
+            <h3 class="mb-3 fw-bold " style="color:#294076">Specifications</h3>
           </div>
-
           <div class="col-12 col-md-10 mx-auto mb-2">
-            <table class="table table-striped table-hover">
-              <thead>
-                <!-- <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Product Number</th>
-                  <th scope="col">Weight</th>
-                </tr> -->
-              </thead>
+            <table class="table table-striped table-hover table-borderless">
               <tbody>
+                <!-- <tr>
+                  <td colspan="2" class="fw-bold fs-5" style="color: #294076">Cabinet</td>
+                </tr> -->
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Product Number</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Product Number</th>
                   <td class="p-color-bk80" style="color: #595857;">OP-FM-N95-FEC</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
                 </tr>
                 <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Certification</th>
-                  <td class="p-color-bk80" style="color: #595857;">EN 149:2001 + A1:2009 13485:2016, ISO 9001:2015, CNS 14755 Z2125-2011, FFP2 NR</td>
-                  <!-- <td>30lbs</td>
-                  <td>@mdo</td> -->
-                </tr>
-                <tr>
-                  <th scope="row" class="fw-bold fs-5" style="color: #595857;">Mask Size</th>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Size</th>
                   <td class="p-color-bk80" style="color: #595857;">Adult</td>
                 </tr>
-
-                <!-- <tr>
-                  <th scope="row">3</th>
-                  <td colspan="2">Larry the Bird</td>
-                  <td>@twitter</td>
-                </tr> -->
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Package</th>
+                  <td class="p-color-bk80" style="color: #595857;">Box of 10 Individually Packaged</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="fw-semibold  fs-6" style="color: #595857;">Certification</th>
+                  <td class="p-color-bk80" style="color: #595857;">
+                    EN 149:2001 + A1:2009 13485:2016 <br />
+                    ISO 9001:2015<br />
+                    CNS 14755 Z2125-2011<br />
+                    FFP2 NR
+                  </td>
+                </tr>
               </tbody>
             </table>
           </div>
