--- a/medical-equipments/medical_devices_and_equipments/imaging_solutions/portable_x-ray_system.html
+++ b/medical-equipments/medical_devices_and_equipments/imaging_solutions/portable_x-ray_system.html
@@ -104,7 +104,7 @@
     <div class="container-xxl" style="margin-bottom: 60px;">
       <div class="row mb-3">
         <div class="col-12 col-sm-6 mb-3">
-          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2 mb-3">
+          <div style="--swiper-navigation-color: #777777; --swiper-pagination-color: #777777;" class="swiper mySwiper2 mb-3">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
@@ -237,3 +237,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
+<style>
+    .mySwiper .swiper-slide{
+      opacity: 0.3
+
+    }
+
+  .mySwiper .swiper-slide-thumb-active{
+    opacity: 1
+  }
+</style>
